--- a/css/index.css
+++ b/css/index.css
@@ -43,12 +43,12 @@
 html {
 	background-color: #008080;
 	font-family: 'PTSans', Arial, sans-serif;
-	font-size: 87%;
+	font-size: 110%;
 }
 .container {
 		max-width: 940px;
 		margin: 0 auto;
-		color: #ffffff;
+		color: #000000;
 }
 h1 {
 	margin: 0;
@@ -56,7 +56,12 @@ h1 {
 .slogan {
 	margin-top: 0px;
 }
-
+/* Heading styling */
+header p a {
+	color: #9eff70;
+	text-decoration: none;
+}
+/* End of Heading styling */
 /* Site Navigation */
 .site-nav li {
 	list-style: none;
@@ -76,7 +81,6 @@ h1 {
 	}
 .site-nav a:hover {
 	background-color: #ffffff;
-	font-weight: bold;
 }
 ul {
 	margin: 0;
@@ -96,7 +100,6 @@ ul {
 			}
 		.site-nav a:hover {
 				background-color: #e8fffd;
-				font-size: 150%;
 			}	
 }
 @media screen and (max-width: 480px) {
@@ -106,7 +109,6 @@ ul {
 			}
 		.site-nav a:hover {
 			background-color: #e8fffd;
-			font-size: 150%;
 					}
 		.site-nav {padding-left: 5px;}
 				}
@@ -176,8 +178,10 @@ margin-right: 20px;
 margin-bottom: 20px;
 box-sizing: border-box;
 font-size: 95%;
+/*
 background-image: linear-gradient(to right, #3eb9b3, #6141b9);
 background-image: -ms-linear-gradient(left, #3eb9b3, #6141b9);
+*/
 }
 .para2 {
 float: right;
@@ -251,4 +255,4 @@ body {
 }
 .image2 {
 	float: right;
-	width: 49%;
+	width: 49%;}
