--- a/css/index.css
+++ b/css/index.css
@@ -88,9 +88,10 @@ ul {
 	}
 @media screen and (max-width: 700px) {
 	.site-nav li {
-		width: 33.332%;
+		width: 31.332%;
 		margin-right: 0;
-		margin-bottom: 0;
+		margin-bottom: 10px;
+		margin-left: 10px;
 		text-align: center;
 				}
 		.site-nav a {
@@ -104,8 +105,10 @@ ul {
 }
 @media screen and (max-width: 480px) {
 	.site-nav li {
-		width: 50%;
+		width: 47%;
 		margin-right: 0;
+		margin-bottom: 10px;
+		margin-top: 0;		
 			}
 		.site-nav a:hover {
 			background-color: #e8fffd;
