--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* Custom Fonts */
+/* Custom Fonts
 @font-face {
 	font-family: 'PTSans';
 	src: url('fonts/ptsans-regular-webfont.eot') format('eot');
@@ -39,10 +39,10 @@
 	font-weight: normal;
 	font-style: italic;
 }
-/* End of custom fonts */
+End of custom fonts */
 html {
-	background-color: #008080;
-	font-family: 'PTSans', Arial, sans-serif;
+	background-color: #50b1b1;
+	font-family: Arial, sans-serif;
 	font-size: 110%;
 }
 .container {
@@ -52,9 +52,13 @@ html {
 }
 h1 {
 	margin: 0;
+	padding: 10px 0 0 0;
 	}
 .slogan {
 	margin-top: 0px;
+}
+.container h3 {
+	margin: 0 auto;
 }
 /* Heading styling */
 header p a {
@@ -200,6 +204,7 @@ font-weight: bold;
 .non-mobile {
 	padding: 5px;
 	max-width: 940px;
+	text-align: center;
 	background-color: #ffffff;
 	margin: 0 auto;
 	margin-top: 10px;
