--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@
 }
 End of custom fonts */
 html {
-	background-color: #50b1b1;
+	background-image: linear-gradient(to right, #7960e7, #96be28);
 	font-family: Arial, sans-serif;
 	font-size: 110%;
 }
@@ -174,6 +174,7 @@ img {
    }
 /* Banner overlay ends */
 .content-area {
+	background-image: linear-gradient(to left, #b9b9b9,#ffffff);
 	background-color: #ffffff;
 	}
 .para1 {
