--- a/css/index.css
+++ b/css/index.css
@@ -1,246 +1,78 @@
-/* Custom Fonts
-@font-face {
-	font-family: 'PTSans';
-	src: url('fonts/ptsans-regular-webfont.eot') format('eot');
-	src: url('fonts/ptsans-regular-webfont.eot#iefix') format('embedded-opentype'),
-		 url('fonts/ptsans-regular-webfont.woff') format('woff'),
-		 url('fonts/PTSans-Regular.ttf') format('truetype'),
-		 url('fonts/ptsans-regular-webfont.svg#pt_sansregular') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'PTSans';
-	src: url('fonts/ptsans-bold-webfont.eot') format('eot');
-	src: url('fonts/ptsans-bold-webfont.eot#iefix') format('embedded-opentype'),
-		 url('fonts/ptsans-bold-webfont.woff') format('woff'),
-		 url('fonts/PTSans-Bold.ttf') format('truetype'),
-		 url('fonts/ptsans-bold-webfont.svg#pt_sansregular') format('svg');
-	font-weight: bold;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'PTSans';
-	src: url('fonts/ptsans-italic-webfont.eot') format('eot');
-	src: url('fonts/ptsans-italic-webfont.eot#iefix') format('embedded-opentype'),
-		 url('fonts/ptsans-italic-webfont.woff') format('woff'),
-		 url('fonts/ptsans-italic-webfont.ttf') format('truetype'),
-		 url('fonts/ptsans-italic-webfont.svg#pt_sansregular') format('svg');
-	font-weight: normal;
-	font-style: italic;
-}
-@font-face {
-	font-family: 'PTSans';
-	src: url('ptsans-bolditalic-webfont.eot') format('eot');
-	src: url('ptsans-bolditalic-webfont.eot#iefix') format('embedded-opentype'),
-		 url('ptsans-bolditalic-webfont.woff') format('woff'),
-		 url('ptsans-bolditalic-webfont.ttf') format('truetype'),
-		 url('ptsans-bolditalic-webfont.svg#pt_sansregular') format('svg');
-	font-weight: normal;
-	font-style: italic;
-}
-End of custom fonts */
 html {
-	background-image: linear-gradient(to right, #7960e7, #96be28);
-	font-family: Arial, sans-serif;
-	font-size: 110%;
+	background-color: #d6d6d6;
+	font-family: 'Roboto Mono', monospace;
 }
-.container {
-		max-width: 940px;
-		margin: 0 auto;
-		color: #000000;
+
+body {
+	/* max-width: 1200px; */
+	margin-left: 0;
+	margin-right: 0;
 }
-h1 {
-	margin: 0;
-	padding: 10px 0 0 0;
-	}
-.slogan {
-	margin-top: 0px;
+
+header {
+	margin: 40px auto 0 auto;
+	text-align: center;
+	border-bottom: 2px solid #787878;
 }
-.container h3 {
-	margin: 0 auto;
-}
-/* Heading styling */
-header p a {
-	color: #9eff70;
-	text-decoration: none;
-}
-/* End of Heading styling */
-/* Site Navigation */
-.site-nav li {
-	list-style: none;
-	float: left;
-	margin-top: 15px;
-	margin-right: 10px;
-	margin-bottom: 10px;
-	}
-.site-nav a {
-	display: block;
-	text-decoration: none;
-	color: #008080;
-	border: 2px solid #ffffff;
-	padding: 10px 20px;
-	background-color: #ffffff;
-	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.7);
-	}
-.site-nav a:hover {
-	background-color: #ffffff;
-}
-ul {
-	margin: 0;
-	padding: 0;
-	}
-@media screen and (max-width: 700px) {
-	.site-nav li {
-		width: 31.332%;
-		margin-right: 0;
-		margin-bottom: 10px;
-		margin-left: 10px;
-		text-align: center;
-				}
-		.site-nav a {
-			padding: 25px 0;
-			font-size: 150%;
-			margin-right: 5px;
-			}
-		.site-nav a:hover {
-				background-color: #e8fffd;
-			}	
-}
-@media screen and (max-width: 480px) {
-	.site-nav li {
-		width: 47%;
-		margin-right: 0;
-		margin-bottom: 10px;
-		margin-top: 0;		
-			}
-		.site-nav a:hover {
-			background-color: #e8fffd;
-					}
-		.site-nav {padding-left: 5px;}
-				}
-/* End Site Navigation */
-/* Sprites */
-.sprites_menu ul {
-	margin: 10px 0;
-	padding: 0;
-	}
-.sprites_menu li {
-	list-style: none;
-	margin-left: 10px;
-	float: left;
-	}
-.sprites_menu a {
-	text-decoration: none;
-	text-align: bottom;
-	display: block;
+
+/* Navigation styling start */
+
+.siteNav {
+	/* max-width: 1200px; */
 	height: 50px;
-	width: 50px;
-	background-image: url(../images/sprites.png);
-	text-indent: -99999px;
+	margin: 15px auto 0 auto;
 }
-.sprites_settings a {background-position: 0 -100px;}
-.sprites_profile a {background-position: 0 -50px;}
-.sprites_home a:hover {background-position: -50px 0;}
-.sprites_profile a:hover {background-position: -50px -50px;}
-.sprites_settings a:hover {background-position: -50px -100px;}
-/* End Sprites */
-/* Banner overlay */
-img { 
-	margin-top: 10px;
-	width: 100%;
-	height: auto;
-	}
-.image-banner {
-	overflow: hidden;
-	position: relative;
-	}
-.image-banner img{
+
+.siteNav a {
+	text-decoration: none;
+/* diplay: block; to make the link fill the li area */
 	display: block;
-	}
-.banner-description {
-	position: absolute;
-	text-align: center;
-	bottom: 0px;
-	left: 0px;
-	background-color: rgba(0, 0, 0, 0.75);
-	color: #cfcfcf;
-	width: 100%;
-	box-sizing: border-box;
-	}
-.image1:hover, .image2:hover {
-	   transform: scale(1);
-	   transition: all 2s;
-   }
-/* Banner overlay ends */
-.content-area {
-	background-image: linear-gradient(to left, #b9b9b9,#ffffff);
-	background-color: #ffffff;
-	}
-.para1 {
-float: left;
-width: 67%;
-padding: 10px 30px;
-margin-top: 20px;
-margin-right: 20px;
-margin-bottom: 20px;
-box-sizing: border-box;
-font-size: 95%;
-/*
-background-image: linear-gradient(to right, #3eb9b3, #6141b9);
-background-image: -ms-linear-gradient(left, #3eb9b3, #6141b9);
-*/
 }
-.para2 {
-float: right;
-width: 30%;
-background-image: linear-gradient(to left, #9ea1a1, #ffffff);
-padding: 10px 30px;
-margin-top: 20px;
-box-sizing: border-box;
-font-size: 85%;
-color: #000000;
-font-weight: bold;
-}
-.non-mobile {
-	padding: 5px;
-	max-width: 940px;
-	text-align: center;
-	background-color: #ffffff;
-	margin: 0 auto;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	vertical-align: middle;
-	box-sizing: border-box;
-	}
-@media screen and (max-width: 700px) {
-	.para1,
-	.para2 {
-		width: auto;
-		float: none;
-		margin-bottom: 10px;
-		}
-}
-@media screen and (max-width: 480px) {
-	.para1,
-	.para2 {
-		padding-left: 10px;
-		padding-right: 10px;
-		}
-	}
 
-@media screen and (max-width: 480px) {
- .non-mobile {display: none;}
+.siteNav li {
+	list-style: none;
+	float: left;
+	width: 15%;
+	height: 50px;
+	font-size: 150%;
+	border-radius: 5px;
+	text-align: center;
+	margin: 0 15px 15px 0;
+	line-height: 50px;
 }
-@media screen and (min-width: 1500px) {
-	.container {
-		max-width: 1350px;
-		font-size: 150%;
-			}
-   }
-/* Strip images */
 
-/* Strip images */
+.siteNav li:hover {
+	background-color: #b0b0b0;
+}
+
+.siteNav li:active {
+	background-color: #e3e3e3;
+}
+
+/* Naviagation styling end */
+
+.container {
+	width: 1200px;
+	margin: 20px auto 0 auto;
+}
+
+.content {
+	margin-top: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	border: 3px solid #dbdbdb;
+	border-radius: 10px;
+	width: 60%;
+	height: 400px;
+	background-color: #abfeff;
+
+}
+
+.content h1 {
+	margin-left: 20px;
+	margin-top: 40px;
+}
+
 .group:before,
 .group:after {
   content: "";
