--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,7 @@ header {
 	border-radius: 10px;
 	width: 70%;
 	height: 600px;
-	background-color: #2bff32;
+	background-color: #4aff95;
 }
 
 .content h1, .content p{
