--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,18 @@
-html {
-	background-color: #d6d6d6;
+body {
+	background: linear-gradient(#fcacc3, #b7acfc);
+	background-repeat: no-repeat;
+	margin: 0 auto;
 	font-family: 'Roboto Mono', monospace;
 }
 
-body {
-	/* max-width: 1200px; */
-	margin-left: 0;
-	margin-right: 0;
-}
-
 header {
-	margin: 40px auto 0 auto;
+	padding: 15px 0 15px 0;
+	margin: 0 auto 0 auto;
 	text-align: center;
 	border-bottom: 2px solid #787878;
+}
+h1 {
+	margin: 0 auto;
 }
 
 /* Navigation styling start */
@@ -22,88 +22,80 @@ header {
 	height: 50px;
 	margin: 15px auto 0 auto;
 }
-
 .siteNav a {
+	color: #fff;
 	text-decoration: none;
 /* diplay: block; to make the link fill the li area */
 	display: block;
+	transform: skewX(-15deg);	
 }
-
 .siteNav li {
 	list-style: none;
 	float: left;
 	width: 15%;
 	height: 50px;
 	font-size: 150%;
-	border-radius: 5px;
 	text-align: center;
-	margin: 0 15px 15px 0;
+	margin: 0 10px 10px 0;
 	line-height: 50px;
+	transform: skewX(15deg);
+	background-color: hsl(168, 100%, 30%);
 }
-
 .siteNav li:hover {
-	background-color: #b0b0b0;
+	background-color: hsl(168, 100%, 50%);
+	transition: all 1s;
 }
-
 .siteNav li:active {
-	background-color: #e3e3e3;
+	background-color: hsl(168, 100%, 30%);
 }
 
 /* Naviagation styling end */
 
+/* Container style starts */
 .container {
-	width: 1200px;
-	margin: 20px auto 0 auto;
+	margin: 0 auto 0 auto;
 }
-
 .content {
-	margin-top: 30px;
-	margin-left: auto;
-	margin-right: auto;
-	border: 3px solid #dbdbdb;
+	color: #FFF;
+	margin: 15px auto 50px auto;
 	border-radius: 10px;
 	width: 70%;
 	height: 500px;
-	background-color: #4aff95;
+	background-color: #8b1f3c;
 }
-
 .content h1, .content p{
 	margin-left: 20px;
-	margin-top: 40px;
+	margin-top: 20px;
 }
-
 .content p {
 	margin-top: 10px;
 }
+/* Container style ends */
 
-.thumbnails {
-	display: flex;
-}
-
-.thumbnails img {
+/* Thumbnail styling start */
+.thumbnail-object img {
 	height: 150px;
 	width: 150px;
 	margin-left: 20px;
 	display: block;
 }
-
-.spectrumV, .pig-game {
+.thumbnail-object {
+	float: left;
 	position: relative;
-	height: 150px;
-	width: 150px;
 }
-
-.spectrumVDescription {
+.thumbnail-object:hover {
+	transition: all 1s;
+	transform: scale(1.1);
+}
+.thumbnail-description {
 	position: absolute;
-	bottom: -13px;
-	font-size: 80%;
-	color: #ffffff;
-	background-color: rgba(0, 0, 0, 0.5);
-	width: 150px;
+	background-color: rgba(0,0,0,0.25);
 	text-align: center;
-	height: 25px;
-	line-height: 25px;
+	width: 150px;
+	bottom: 0;
+	margin-left: 20px;
 }
+/* Thumbnail styling end */
 
 .group:before,
 .group:after {
