--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,8 @@
+html {
+}
 body {
-	background: linear-gradient(#fcacc3, #b7acfc);
+	color: #fff;
+	background: linear-gradient(#525151, #afafaf);
 	background-repeat: no-repeat;
 	margin: 0 auto;
 	font-family: 'Roboto Mono', monospace;
@@ -18,11 +21,11 @@ h1 {
 /* Navigation styling start */
 
 .siteNav {
-	/* max-width: 1200px; */
+	max-width: 1200px;
 	height: 50px;
 	margin: 15px auto 0 auto;
 }
-.siteNav a {
+.siteNav a {	
 	color: #fff;
 	text-decoration: none;
 /* diplay: block; to make the link fill the li area */
@@ -39,6 +42,7 @@ h1 {
 	margin: 0 10px 10px 0;
 	line-height: 50px;
 	transform: skewX(15deg);
+	transition: all 1s;
 	background-color: hsl(168, 100%, 30%);
 }
 .siteNav li:hover {
@@ -56,12 +60,11 @@ h1 {
 	margin: 0 auto 0 auto;
 }
 .content {
-	color: #FFF;
 	margin: 15px auto 50px auto;
 	border-radius: 10px;
 	width: 70%;
 	height: 500px;
-	background-color: #8b1f3c;
+	/* background-color: #8b1f3c; */
 }
 .content h1, .content p{
 	margin-left: 20px;
