update to styling

--- a/projects/pig_game/pig_game.css
+++ b/projects/pig_game/pig_game.css
@@ -50,6 +50,7 @@ body {
     position: absolute;
     padding: 10px 20px;
     background-color: #db1f6a;
+    color: #fff;
     /* border-radius: 3px; */
     width: inherit;
     box-sizing: border-box;
