--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 body {
 	color: #fff;
 	background: linear-gradient(#525151, #afafaf);
@@ -99,6 +98,31 @@ h1 {
 	margin-left: 20px;
 }
 /* Thumbnail styling end */
+
+
+@media (max-width: 480px) {
+	.siteNav {
+		height: 120px;
+		margin-right: 20px;
+	}
+    .siteNav a {
+		transform: none;
+	}
+	.siteNav li {
+		width: 31%;
+		transform: none;
+		margin: 0 5px 5px auto;		
+	}
+	.container {
+		width: 100%;
+	}
+	.content {
+		width: 95%;
+		height: 400px;
+		margin-top: 0;
+	}
+	
+}
 
 .group:before,
 .group:after {
