update to pig game styling for 480p

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body {
 	color: #fff;
 	background: linear-gradient(#525151, #afafaf);
+	background-repeat: no-repeat;
 	margin: 0 auto;
 	font-family: 'Roboto Mono', monospace;
 }
