--- a/projects/pig_game/pig_game.css
+++ b/projects/pig_game/pig_game.css
@@ -178,13 +178,13 @@ body {
         margin-bottom: 0;
     }
     .score-box-round {
-        height: 10%;
-        width: 20%;
+        height: 50px;
+        width: 50px;
         margin: 5px auto;
     }
     #score-num-round-one, #score-num-round-two {
-        height: 40px;
-        line-height: 40px;
+        height: 50px;
+        line-height: 50px;
     }
     #score-num-one, #score-num-two {
         font-size: 4em;
@@ -206,13 +206,13 @@ body {
     }
     #player-one-hold, #player-two-hold {
         background-color: #e21b1b;
-        top: 78%;
+        top: 85%;
     }
     #player-one-roll, #player-one-hold {
         left: 15%;
     }
     #player-one-roll, #player-two-roll {
-        top: 65%;
+        top: 70%;
     }
     #player-two-roll, #player-two-hold {
         left: 65%
