--- a/projects/pig_game/pig_game.css
+++ b/projects/pig_game/pig_game.css
@@ -1,149 +1,153 @@
 body {
     position: relative;
 }
-
-.box {
+.siteNav {
+    width: 1000px;
+}
+.row-one, .row-two, .row-three {
     position: relative;
-    background-color: #9ad379;
     color: #fff;
     width: 90%;
-    height: 80%;
+    height: 300px;
     margin: 10px auto;
-    box-shadow: 0 0 10px #ffffff;
     display: flex;
-    justify-content: space-evenly;  
+    justify-content: space-around;
+}
+.score-box-one, .game-end, .score-box-two, .round-score-one, .dice-image, .round-score-two, .button-one, .button-start, .button-two {
+    flex-basis: 33%;
+    height: 300px;
+    width: 33%;
 }
 
-.playerOne, .playerTwo {
-    flex-basis: 50%;
-}
+/* ROW ONE START */
 
-.score-box {
-    position: relative;
+.row-one {    
+    background-color: rgb(150, 146, 146);
 }
-
-.score-box, .score-box-round {
-    height: 125px;
-    width: 125px;
-    margin: 50px auto;
-    text-align: center;
-    background-color: #FFFFFF;
-    border-radius: 3px;
+.score-box-one, .game-end, .score-box-two {
     position: relative;
     color: #000;
+    background-color: #fff;
+    text-align: center;
+    margin: 0 auto;
 }
-
-.score-box-round {
-    height: 50px;
-    width: 50px;
-    line-height: 50px;
-    font-size: 2em;
-}
-#score-num-one, #score-num-two {
-    position: relative;
-    top: 0;
-    font-size: 5em;
-    margin-bottom: 0;
-}
-
 #player-one-label, #player-two-label {
-    font-size: 0.75em;
     position: absolute;
+    font-size: 2em;
     padding: 10px 20px;
     background-color: #db1f6a;
     color: #fff;
-    /* border-radius: 3px; */
-    width: inherit;
+    width: 100%;
     box-sizing: border-box;
     bottom: 0;
+    margin: 0;
 }
+#score-num-one, #score-num-two {
+    line-height: 300px;
+    position: relative;
+    font-size: 10em;
+    margin: 0;
+}
+.game-end {
+    padding: 10px 40px;
+    text-align: center;
+    background-color: #db1f6a;
+    color: #ffffff;
+    box-sizing: border-box;
+    opacity: 0;
+}
+.game-end p {            
+    margin: 2px auto 2px auto;
+    font-size: 12px;
+}
+.game-end p:first-child {
+    font-size: 24px;
+    padding-bottom: 5px;
+}
+/* ROW ONE END */
 
+/* ROW TWO START */
+.row-two {
+    height: 200px;
+}
+.round-score-one, .dice-image, .round-score-two {
+    height: 200px;
+    color: #000;
+    line-height: 200px;
+    text-align: center;
+    font-size: 5em;
+}
+#score-num-round-one, #score-num-round-two {
+    height: inherit;
+    margin: 0;
+}
+/* Dice styling start */
+#dice {
+    animation-name: shake;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-delay: 0ms;
+    background-color: rgb(0,0,0,0)
+}
+img {
+    height: 100%
+}
+@keyframes shake {
+    0% {transform: scale(1);}
+    50% {transform: scale(1.1);}
+    100% {transform: scale(1);}
+}
+/* Dice styling end */
+/* ROW TWO END */
+
+/* ROW THREE START */
 
 /* Roll and hold buttons start */
-#player-one-roll, #player-two-roll, #player-one-hold, #player-two-hold, #button-start-stop {
-    position: absolute;
-    padding: 12px 30px;
-    border-radius: 10px;
-    background-color: #0bd43d;
-    width: 15%;
-    border: 0;
-    padding: 0;
+.row-three {
+    height: 100px;
+    margin-top: 40px;
 }
-#player-one-roll, #player-two-roll {
-    top: 75%;
+#player-one-roll, #player-two-roll, #player-one-hold, #player-two-hold, #button-start-stop {
+    background-color: #0bd43d;
+    width: 100%;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 1.5em;
+    border: none;
 }
 #player-one-hold, #player-two-hold {
     background-color: #e21b1b;
-    top: 88%;
 }
-#player-one-roll, #player-one-hold {
-    left: 17%;
+#button-start-stop {
+    height: 100px;
+    font-size: 3em;
+    line-height: 100px;
 }
-#player-two-roll, #player-two-hold {
-    left: 68%
-}
-.button-roll-hold a, #button-start-stop {
-    display: block;
+.button-roll-hold a {
     text-decoration: none;
-    line-height: 40px;
-    padding: 0;
     color: #fff;
 }
 /* Roll and hold buttons end */
 
-/* Dice styling start */
-#dice {
-    position: absolute;
-    top: 150px;
-}
-#dice {
-    height: 100px;
-    left: 43%;
-    animation-name: shake;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-delay: 0ms;
-}
-@keyframes shake {
-    0% {transform: rotate(0deg);}
-    25% {transform: rotate(-20deg);}
-    75% {transform: rotate(20deg);}
-    100% {transform: rotate(0deg);}
-}
-/* Dice styling end */
+/* ROW THREE END */
 
-#button-start-stop {
-    position: absolute;
-    left: 43%;
-    top: 300px;
-    width: 100px;
-    height: 60px;
-    line-height: 60px;
-    text-decoration: none;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-}
 
-#game-end {
-    position: absolute;
-    top: 40px;
-    padding: 10px 40px;
-    display: block;
-    text-align: center;
-    background-color: #db1f6a;
-    color: #ffffff;
-    opacity: 0;
-}
-#game-end p {            
-    margin: 2px auto 2px auto;
-    font-size: 12px;
-}
-#game-end p:first-child {
-    font-size: 16px;
-    padding-bottom: 5px;
-}
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Reversing index.css styling */
