--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,7 @@ h1 {
 /* Thumbnail styling end */
 
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
 	.siteNav {
 		height: 120px;
 		margin-right: 20px;
@@ -122,7 +122,7 @@ h1 {
 		margin-top: 0;
 	}
 	
-}
+} */
 
 .group:before,
 .group:after {
