--- a/projects/pig_game/pig_game.css
+++ b/projects/pig_game/pig_game.css
@@ -4,17 +4,22 @@ body {
 .siteNav {
     width: 1000px;
 }
+.box {
+    background: linear-gradient(rgb(129, 156, 87), #fff);
+    border-radius: 5px;
+}
 .row-one, .row-two, .row-three {
-    position: relative;
     color: #fff;
-    width: 80%;
+    width: 100%;
     margin: 10px auto;
     display: flex;
     justify-content: space-around;
 }
-.score-box-one, .game-end, .score-box-two, .round-score-one, .dice-image, .round-score-two, .button-one, .button-start, .button-two {
-    flex-basis: 33%;
-    width: 33%;
+.score-box-one, .score-box-two {
+    flex: 1;
+}
+.game-end {
+    flex: 0.5;
 }
 
 /* ROW ONE START */
@@ -26,7 +31,7 @@ body {
     position: relative;
     color: #000;
     text-align: center;
-    margin: 0 auto;
+    margin: 20px auto;
     height: 70%;
 }
 #score-num-one, #score-num-two {
@@ -35,6 +40,15 @@ body {
     background-color: #fff;
     font-size: 5em;
     margin: 0 auto;
+    border-radius: 5px;
+}
+#score-num-one, #player-one-label {
+    position: absolute;
+    right: 0;
+}
+#score-num-two, #player-two-label {
+    position: absolute;
+    left: 0;
 }
 #player-one-label, #player-two-label {
     margin: 0 auto;
@@ -46,8 +60,8 @@ body {
     background-color: #db1f6a;
     color: #fff;
     box-sizing: border-box;
+    bottom: 0;
 }
-
 .game-end {
     padding: 10px 40px;
     text-align: center;
@@ -68,26 +82,42 @@ body {
 
 /* ROW TWO START */
 .row-two {
-    height: 200px;
+    height: 100px;
+}
+.score-round-one, .score-round-two, .dice-image {
+    flex: 0.5;    
+    margin: 20px auto;
 }
 .round-score-one, .dice-image, .round-score-two {
-    height: 200px;
+    position: relative;
+    height: 100px;
     color: #000;
     line-height: 200px;
     text-align: center;
     font-size: 5em;
+    width: 40%;
 }
 #score-num-round-one, #score-num-round-two {
-    height: 40%;
+    height: 100%;
     width: 40%;
     line-height: 100%;
     background-color: #fff;
     font-size: 1em;
     margin: 0 auto;
+    border-radius: 5px;
+}
+#score-num-round-one {
+    position: absolute;
+    right: 0;
+}
+#score-num-round-two {
+    position: absolute;
+    left: 0;
 }
 /* Dice styling start */
-#dice-image {
+.dice-image {
     height: 100px;
+    line-height: 0;
 }
 #dice {
     animation-name: shake;
@@ -98,11 +128,14 @@ body {
     background-color: rgb(0,0,0,0)
 }
 img {
-    height: 100%
+    height: 100px;
+}
+.dice-image p {
+    margin: 0 auto;
 }
 @keyframes shake {
     0% {transform: scale(1);}
-    50% {transform: scale(1.1);}
+    50% {transform: scale(1.01);}
     100% {transform: scale(1);}
 }
 /* Dice styling end */
@@ -112,11 +145,16 @@ img {
 
 /* Roll and hold buttons start */
 .row-three {
-    height: 150px;
+    height: 230px;
+}
+.button-one, .button-two, .button-start {
+    position: relative;
+    flex: 0.5;    
+    margin: 5% auto;
 }
 #player-one-roll, #player-two-roll, #player-one-hold, #player-two-hold, #button-start-stop {
+    font-family: 'Roboto Mono', monospace;
     background-color: #0bd43d;
-    width: 75%;
     margin: 0 auto;
     color: #fff;
     display: block;
@@ -124,17 +162,40 @@ img {
     height: 50px;
     line-height: 50px;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1em;
     border: none;
-    margin-bottom: 10px;
+    margin-bottom: 10px;    
+    border-radius: 5px;
+}
+#player-one-roll, #player-one-hold {
+    position: absolute;
+    width: 40%;
+    right: 0;
+}
+#player-two-roll, #player-two-hold {
+    position: absolute;
+    width: 40%;
+    left: 0;
+}
+#player-one-roll, #player-two-roll {
+    position: absolute;
+    top: 0;
+}
+#player-one-hold, #player-two-hold {
+    position: absolute;
+    bottom: 0;
+}
+button:hover, #button-start-stop:hover {
+    transition: all 1s;
+    transform: scale(1.05);
 }
 #player-one-hold, #player-two-hold {
     background-color: #e21b1b;
 }
 #button-start-stop {
-    height: 100px;
-    font-size: 3em;
-    line-height: 100px;
+    height: 70x;
+    font-size: 1em;
+    width: 50%;
 }
 .button-roll-hold a {
     text-decoration: none;
@@ -144,12 +205,6 @@ img {
 
 /* ROW THREE END */
 
-/* Reversing index.css styling */
-.content h1, .content p{
-	margin-left: 0px;
-    margin-top: 0px;
-    margin-bottom: 0;
-}
 /* 
 @media (max-width: 480px) {
     body {
