--- a/css/index.css
+++ b/css/index.css
@@ -11,14 +11,10 @@ header {
 	text-align: center;
 	border-bottom: 2px solid #787878;
 }
-h1 {
-	margin: 0 auto;
-}
 
 /* Navigation styling start */
 
-.siteNav {
-	
+.siteNav {	
 	height: 50px;
 	margin: 15px auto 0 auto;
 }
@@ -55,7 +51,7 @@ h1 {
 /* Container style starts */
 .container {
 	margin: 0 auto 0 auto;
-	width: 1000px;
+	width: 60%;
 	padding-bottom: 100px;
 	box-sizing: border-box;
 }
